template/kubernetes/infrastructure/controllers/reloader/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: reloader
  labels:
    app.kubernetes.io/name: reloader
    app.kubernetes.io/managed-by: flux
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/audit: restricted
